Set overflow: hidden on blended image div to prevent it overflowing the page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,7 +44,7 @@ body {
     position: relative;
     height: 90vh;
     width: 100%;
-    
+    overflow: hidden;
 }
 
 #ripples-image {
